# autonomous-agent-builder

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  VALIDATION_SUMMARY.md  pyproject.toml
.agent-builder/: config.yaml
.claude/: settings.json  settings.local.json
.codex/: config.toml
.memory/: .gc-log  INDEX.md  pattern_cli-validation-system-for-cross-platform-compatibility.md  routing.json
docker/: Dockerfile  docker-compose.yml
docs/: MISSION.md  QUALITY_SCORE.md  claude-agent-sdk-integration.md  cli-validation.md  knowledge-document-format.md  knowledge-document-linting.md  knowledge-extraction-coverage-final.md  knowledge-extraction-coverage.md  knowledge-extraction-summary.md  knowledge-extraction.md  knowledge-gaps-analysis.md  knowledge-quality-gate.md  workflow-cli-usage.md
eval/: state.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
prompts/: implementation.md  planning.md
scripts/: README.md  audit_skill.py  check_chat_tables.py  check_db.py  check_doc_ownership.py  check_kb.py  check_quality_gate_contracts.py  check_root_db.py  check_tasks.py  cleanup_db.py  deploy_dashboard.bat  deploy_dashboard.ps1  deploy_dashboard.sh  documentation_freshness_ci.py  import_feature_list.py  seed_demo.py  test_api_path.py  test_cli_tools.py  validate_cli_wrappers.py
tests/: conftest.py  test_agent_cli.py  test_agent_quality_gate.py  test_agent_runner.py  test_api_routes.py  test_builder_cli_surfaces.py  test_builder_tool_service.py  test_claude_runtime.py  test_cli_client.py  test_cli_output.py  test_config.py  test_dashboard_api.py  test_dashboard_streams.py  test_definitions.py  test_doc_contracts.py  test_doc_ownership.py  test_documentation_bridge.py  test_documentation_freshness_ci.py  test_egress_monitor.py  test_embedded_agent_routes.py  test_embedded_dashboard_streams.py  test_embedded_kb_routes.py  test_embedded_server_app.py  test_gate_feedback.py  test_harnessability.py  test_hooks.py  test_init_impl.py  test_kb_evidence_graph.py  test_kb_extractor.py  test_kb_publisher.py  test_kb_routes.py  (+16 more)
(+308 files in other folders)
