[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonomous_agent_builder"]

[tool.hatch.build.targets.wheel.force-include]
"src/autonomous_agent_builder/embedded" = "autonomous_agent_builder/embedded"

[project]
name = "autonomous-agent-builder"
version = "0.1.0"
description = "Production-grade autonomous SDLC builder using Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    # Agent runtime
    "claude-agent-sdk>=0.1.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Templating / Dashboard
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    # Logging
    "structlog>=24.4.0",
    # CLI
    "typer[all]>=0.12.0",
    "httpx>=0.28.0",
    # LLM fallback (optional — install separately on Linux/Mac)
    # "litellm>=1.55.0",
    # Git
    "gitpython>=3.1.43",
]

[project.scripts]
builder = "autonomous_agent_builder.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4",
    "mypy>=1.13",
]
observability = [
    "langfuse>=2.57.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = [
    "B008",      # Depends() in function defaults — standard FastAPI pattern
    "ASYNC240",  # pathlib in async — acceptable for filesystem checks
    "ASYNC109",  # timeout param in async — we use asyncio.wait_for internally
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -p pytest_asyncio.plugin"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
